@@ -2,7 +2,9 @@
 v2.29.19
 --------
 
-
+[mjr] Support returning entire thread list (Ticket #14943,
+      mariusz.goch@spacja.com).
+|+
 
 
 --------
